[package]
name = "dyn-cc"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dyn-cc"
path = "src/main.rs"


[profile.release]
debug = true

[dependencies]
anyhow = "1.0.100"
dyn-stack = "0.13.2"
faer = "0.23.2"
indicatif = "0.18.2"
itertools = "0.14.0"
linfa = { version = "0.8.0", features = ["blas"] }
linfa-clustering = "0.8.0"
ndarray = "0.16.1"
ndarray-linalg = "0.17"
num-complex = "0.4.6"

ordered-float = "5.1.0"
priority-queue = "2.7.0"
rand = "0.9.2"
raphtory = { path = "/home/ben/GIT/Raphtory/raphtory"}
rayon = "1.11.0"
rustc-hash = "2.1.1"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "process_node_diffs"
harness = false
